<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewAddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/AddWordTitleTopPadding"
        android:text="@string/add_card_front_title"
        android:textColor="@color/font_color_card_info"
        android:textSize="@dimen/CardDefaultFontSize" />

    <EditText
        android:id="@+id/editTextAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewAddTitle"
        android:gravity="top|left"
        android:layout_marginBottom="@dimen/EditWordPaddingTopBottom"
        android:layout_marginLeft="@dimen/EditWordPaddingLeftRight"
        android:layout_marginRight="@dimen/EditWordPaddingLeftRight"
        android:textColor="@color/font_color"
        android:typeface="normal"
        android:inputType="textMultiLine"
        android:textSize="@dimen/CardDefaultFontSize" />

    <LinearLayout
        android:id="@+id/linearLayoutAddEditButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/SaveButtonTopPadding" >

        <ImageButton
            android:id="@+id/imageButtonAddCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/EditButtonsCenterPadding"
            android:background="@null"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/button_cancel" />

        <ImageButton
            android:id="@+id/imageButtonAddSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/EditButtonsCenterPadding"
            android:background="@null"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/button_save" />
    </LinearLayout>

</RelativeLayout>